# ti-relay-trader

./: .gitignore  README.md  go.mod  go.sum
cmd/relay-docs/: main.go
cmd/relayctl/: main.go
config/: relay.example.yaml  relay.prod.example.yaml  relay.test.example.yaml
docs/: API_TEST_CONSOLE.md  ARCHITECTURE.md  DATA_MODEL.md  MIGRATIONS.md  OPERATIONS.md  PERFORMANCE_ANALYSIS_DESIGN.md  PYTHON_SDK.md  REDIS_LEDGER_SYNC.md  REDIS_STREAM_PROBE.md  ROADMAP.md  THIRD_PARTY_INTEGRATION_GUIDE.md  TRADING_API_SCHEMA.md  TRADING_DAY_WORKFLOW.md  TRADING_TERMINAL.md
internal/api/: server.go  server_test.go
internal/config/: config.go  config_test.go
internal/events/: hub.go  hub_test.go
internal/httpx/: envelope.go  envelope_test.go  middleware.go
internal/ledger/: json.go  repository.go  repository_integration_test.go  repository_test.go  sql.go
internal/logging/: logging.go  logging_test.go
internal/market/: meridian.go  meridian_test.go
internal/orderflow/: auto_refresh.go  auto_refresh_test.go  service.go  service_test.go
internal/redisstream/: command.go  command_test.go  env.go  env_test.go  ledger_sync.go  ledger_sync_loop.go  ledger_sync_test.go  message.go  message_test.go  probe.go  probe_test.go  scan.go  streams.go  streams_test.go
internal/trading/: json.go  (+4 more)
scripts/: .gitkeep  build-python-sdk.py  check-python-sdk-release.py  serve-docs.sh  switch-relay-env.sh
sdk/python/: README.md  pyproject.toml
sdk/python/relay_sdk/: __init__.py  client.py  errors.py  models.py  streaming.py
sdk/python/tests/: test_client.py
tests/: README.md
(+50 files in other folders)
