[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-sdk"
version = "0.1.1"
description = "Python SDK for the Relay Trader 9092 API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "QuantStage Relay" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["relay_sdk*"]
